[package]
name = "qbd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbd-async = "0.6.0"
memmap2 = "0.7"
async-trait = "0.1"
tokio = { version = "1.29", features=["rt", "macros", "rt-multi-thread", "io-std", "fs"] }
thiserror = "1"
lru = "0.12"
crc = "3.0.1"
