[package]
name = "qbd"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
name="qbd"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbd-async = "0.6.0"
memmap2 = "0.7"
async-trait = "0.1"
tokio = { version = "1.29", features=["rt", "macros", "rt-multi-thread", "io-std", "fs"] }
thiserror = "1"
lru = "0.12"
crc = "3.0.1"
clap = { version = "4.4", features=["derive"] }
bytesize = "1.3"
log = "0.4"
simple_logger = "1.0"
anyhow = "1.0"
prometheus = "0.13"
lazy_static = "1.4"
prometheus-hyper = {version = "0.1", features = ["internal_metrics"] }
ioctls = "0.6"
url = "2.4"
nix = {version = "0.27", features = ["fs"] }
sled = {version = "0.34", features = ["io_uring"] }

[build-dependencies]
git-version = "0.3"
